[gd_scene load_steps=2 format=3 uid="uid://b7e3ejm5elwko"]

[ext_resource type="Script" uid="uid://chxiujguuyvhn" path="res://view_models/ampel.gd" id="1_lykj0"]

[node name="ampel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lykj0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="AmpelButton" type="Button" parent="PanelContainer/CenterContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="PhaseTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="PanelContainer/CenterContainer/AmpelButton" to="." method="_on_ampel_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/CenterContainer/AmpelButton" to="." method="_on_ampel_button_mouse_exited"]
[connection signal="pressed" from="PanelContainer/CenterContainer/AmpelButton" to="." method="_on_ampel_button_pressed"]
[connection signal="timeout" from="PhaseTimer" to="." method="_on_phase_timer_timeout"]
